--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "style-loader": "^0.21.0",
     "swiper": "^3.4.2",
     "url-loader": "^1.0.1",
+    "webfonts-loader": "^4.1.0",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.2"
   },
